--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,22 +6,20 @@ spec:
   type: NodePort
   ports:
   - protocol: TCP
-    targetPort: 3000
-    port: 3000
+    targetPort: 80
+    port: 80
     nodePort: 32000
   selector:
     app: node-app
-
-
-
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Node-deployment
+  name: node-deployment
   labels:
     app: nodeapp
 spec:
-  replicas:2
+  replicas: 2
   template:
     metadata:
       name: node-helloworld
@@ -32,7 +30,7 @@ spec:
         - name: nodejs
           image: nginx
           ports:
-            - containerPort: 3000
-    selector:
-      matchLabels:
-        app: node-app          
+            - containerPort: 80
+  selector:
+    matchLabels:
+      app: node-app
