--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,8 +6,8 @@ spec:
   type: NodePort
   ports:
   - protocol: TCP
-    targetPort: 80
-    port: 80
+    targetPort: 3000
+    port: 3000
     nodePort: 32000
   selector:
     app: node-app
@@ -30,7 +30,51 @@ spec:
         - name: nodejs
           image: nginx
           ports:
-            - containerPort: 80
+            - containerPort: 3000
   selector:
     matchLabels:
-      app: node-app
+      app: node-app    
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: jenkins
+  namespace: ns
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: jenkins
+  namespace: ns
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["create","delete","get","list","patch","update","watch"]
+- apiGroups: [""]
+  resources: ["pods/exec"]
+  verbs: ["create","delete","get","list","patch","update","watch"]
+- apiGroups: [""]
+  resources: ["pods/log"]
+  verbs: ["get","list","watch"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get"]
+- apiGroups: [""]
+  resources: ["services"]
+  verbs: ["create","delete","get","update"]
+- apiGroups: ["apps"]
+  resources: ["deployments"]
+  verbs: ["create","delete","get","update"]  
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: RoleBinding
+metadata:
+  name: jenkins
+  namespace: ns
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: jenkins
+subjects:
+- kind: ServiceAccount
+  name: jenkins            
