--- a/deployment.yaml
+++ b/deployment.yaml
@@ -34,3 +34,9 @@ spec:
   selector:
     matchLabels:
       app: node-app
+
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: nodejs-jenkins
